# SpotifyTerminalController

./: CMakeLists.txt  README.md  main.cpp
